prepare project for production deployment
